sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: illegal start of simple pattern
		for(var i:Int =0;i<getNombreValeurs()-1;i++){
                    ^AlgBubbleSort1:7: error: '<-' expected but ';' found.
		for(var i:Int =0;i<getNombreValeurs()-1;i++){
                                ^AlgBubbleSort1:7: error: '<-' expected but ';' found.
		for(var i:Int =0;i<getNombreValeurs()-1;i++){
                                                       ^AlgBubbleSort1:7: error: illegal start of simple pattern
		for(var i:Int =0;i<getNombreValeurs()-1;i++){
                                                           ^AlgBubbleSort1:16: error: illegal start of simple expression
	}
        ^