sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var test:Boolean = true;
	while(test)
	{
		test=false;
		for(var i:Int =0;i<getNombreValeurs()-1;i++){
			if(!plusPetit(getValeur(i),getValeur(i+1)))
			{
				var temp:Int =getValeur(i);
				setValeur(i,getValeur(i+1));
				setValeur(i+1,temp);
				test=true;
			}
		}
	}
}
